--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:29.0-jre'
+
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+
 }
 
 application {
@@ -36,4 +39,8 @@ application {
 tasks.named('test') {
     // Use junit platform for unit tests.
     useJUnitPlatform()
+}
+
+application {
+    mainClass = 'edu.isu.cs2263.Visitor.Application'
 }
